style.css
body {
background: radial-gradient(circle, #FFEAEA 0%, #FFDCDC 100%);
  font-family: "Montserrat Alternates", sans-serif;
  font-weight: 600;
  font-style: normal;
}

h1 {
    color: #3C2B20;
    font-size: 22px;
    margin-bottom: 0;
  }

.logo{
font-family: "Montserrat Alternates", sans-serif;
  font-weight: 600;
  font-style: normal;

}
.logo2{
font-family: "Montserrat Alternates", sans-serif;
  font-weight: 400;
  font-style: italic;
  
}

header{
    border-bottom: #FFDCDC 1px solid;
}

.weather-app{
background-color: #FDFBF7;
    padding: 18px 18px;
    border-radius: 20px;
    max-width: 500px;
    margin: 45px auto;
    border-radius: 12px;
box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08),     
    0 40px 100px 30px rgba(255, 160, 122, 0.25); 
}
.weather-app-data{
    display: flex;
    justify-content: space-between;
}

.city-name{
    color: #1d150f;
    font-size: 38px;
    line-height: 48px;
    font-weight: 600;
    margin-bottom: 0;
}

.weather-app-details
{
    color: #3C2B20;
    font-size: 13px;
    line-height: 20px;
    font-weight: 400;
}
.weather-app-details strong{
    color: #c33d53;
    font-weight: 600;
}

.weather-app-temp-container{
    display: flex;
    align-items: center;
}

.weather-icon{
width: 80px;
height: 80px;
margin-bottom: 10px;
}

.weather-temp{
    font-size: 70px;
    color: #201812;
    line-height: 88px;
}

.weather-app-unit{
    margin-bottom: 18px;
    font-size: 28px;
}

.search-form-input{
    width: 80%;
    padding: 12px 20px;
    margin-bottom: 20px;
    border: 0.2px solid #C7938B;
    border-radius: 6px;
    background-color: #ffefee6d;
}

#forecast {
    display: flex;
    justify-content: space-around;
}

.weather-forecast {
    display: flex;
    justify-content: space-around;
    margin-top: 28px;
    width: 100%;
}
.weather-forecast-date {
    text-align: center;
    font-size: 16px;
    line-height: 16px;
    color: #100507;
    flex: 1;
}

.weather-forecast-icon {
    width: 68px;
    heigh: 68px;
    display: block;
    margin: 0 auto;
    text-align: center;

}

.weather-forecast-temps {
    text-align: center;
    display: flex;
    justify-content: center;
    margin-top: 10px;
    color: #c33d53;
    font-size: 12px;
}

.weather-forecast-temp {
    padding: 0 5px;
}


.search-button{
  background-color: #C7938B;
  color: #FFFFFF; 
  border: none;
  padding: 12px 20px;
  border-radius: 6px; 
  cursor: pointer;
  font-family: "montserrat alternates", sans-serif; 
  transition: background-color 0.3s ease;
}

main{
    padding: 30px;
}


.search-button:hover {
  background-color: #B57F77; 
}

a{
    color: #8b6a64;
    text-decoration: underline;
}

footer{
       border-top: #FFDCDC 1px solid;
    padding: 20px 0 0 0;
    text-align: center;
    font-size: 10px;
    color: #C7938B;
    font-family:'Lucida Sans',Geneva, Verdana, sans-serif
}

